Fix sticky scrolling due to overflow style leaking to desktop screen

--- a/src/index.css
+++ b/src/index.css
@@ -133,3 +133,8 @@
   padding: 0;
   text-align: center;
 }
+
+.no-scroll {
+  overflow: hidden !important;
+  height: 100vh;
+}
